@@ -1,3 +1,5 @@
+* Allow to launch endorsement process from contract
+
 Version 1.4 - 2015-05-29
 
 Version 1.3 - 2015-01-22
